pegando projeto corretamente de Conexões

--- a/operacional/templates/operacional/carregar_certificado.html
+++ b/operacional/templates/operacional/carregar_certificado.html
@@ -103,7 +103,7 @@
     // Atualiza o projeto em função do estudante selecionado
     $("#usuario").change(function() {
       var projeto = $("#usuario option:selected").attr("data-projeto");
-      $('#projeto').selectpicker('val', projeto);
+      $("#projeto").selectpicker("val", projeto);
     });
 
   </script>
