--- a/projetos/templates/projetos/lista_feedback_estudantes.html
+++ b/projetos/templates/projetos/lista_feedback_estudantes.html
@@ -160,7 +160,7 @@
           "Recomendo fortemente"
         ]
       },
-      options: {title: {text: "Recomendaria Organização Parceira"} }
+      options: {title: {display: true, text: "Recomendaria Organização Parceira"} }
     });
 
     var config_primeira_opcao = Object.assign({}, pie_base, {
@@ -174,7 +174,7 @@
           "Não"
         ]
       },
-      options: {title: {text: "Primeira Opção"} }
+      options: {title: {display: true, text: "Primeira Opção"} }
     });
 
     var config_proposta = Object.assign({}, pie_base, {
@@ -191,7 +191,7 @@
           "Não haviam vagas em aberto"
         ]
       },
-      options: {title: {text: "Recebeu proposta de estágio"} }
+      options: {title: {display: true, text: "Recebeu proposta de estágio"} }
     });
 
     var config_trabalhando = Object.assign({}, pie_base, {
@@ -207,7 +207,7 @@
           "Prefiro não responder"
         ]
       },
-      options: {title: {text: "Onde está trabalhando"} }
+      options: {title: {display: true, text: "Onde está trabalhando"} }
     });
 
     var config_feedbacks = {
