--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -1221,30 +1221,30 @@
       document.getElementById("segundo_semestre").style.color = "grey";
       document.getElementById("segundo_semestre").style.background = "#D0EED0";
       
-      [].forEach.call(document.querySelectorAll('.semestre'), function (el) {
-        el.style.display = 'none';
+      [].forEach.call(document.querySelectorAll(".semestre"), function (el) {
+        el.style.display = "none";
       });
-      $('#linha_lab').hide()
-      $('#linha_lab_br').hide()
-      $('#linha_provas').hide()
+      $("#linha_lab").hide()
+      $("#linha_lab_br").hide()
+      $("#linha_provas").hide()
       var els = Array.from(document.querySelectorAll(".semestre[data-mes]")).filter(el => Number(el.dataset.mes) < fim_semestre);
       [].forEach.call(els, function (el) {
         //el.style.display = 'inline';
         if(el.classList.contains("lin_aulas")) { // Preciso fazer isso para a tabela de aulas no final da página
-          el.style.display = 'table-row';
+          el.style.display = "table-row";
           if(!el.classList.contains('ano'+currentYear)) {
-            el.style.display = 'none';
+            el.style.display = "none";
           }
         } else {
-          el.style.display = 'inline';
+          el.style.display = "inline";
         }
-        if(el.parentNode.classList.contains('ano'+currentYear)) {
-          if(el.classList.contains('lab')) {
-            $('#linha_lab_br').show()
-            $('#linha_lab').show()
+        if(el.parentNode.classList.contains("ano"+currentYear)) {
+          if(el.classList.contains("lab")) {
+            $("#linha_lab_br").show()
+            $("#linha_lab").show()
           }
-          if(el.classList.contains('prova')) {
-            $('#linha_provas').show()
+          if(el.classList.contains("prova")) {
+            $("#linha_provas").show()
           }
         }
       });
@@ -1352,7 +1352,7 @@
       mostra_semestre(2);
       
     }
-    document.querySelector('#segundo_semestre').addEventListener("click",segundo)
+    document.querySelector("#segundo_semestre").addEventListener("click",segundo)
 
     window.onload = carrega_semestre
     
@@ -1361,7 +1361,7 @@
 
     function carrega_semestre() {
       var today = new Date();
-      if(today.getMonth() <= 7) {
+      if(today.getMonth() < 6) {
         primeiro();
       } else {
         segundo();
