prévia de sistema de alocação semanal

--- a/estudantes/templates/estudantes/alinhamentos_gerais.html
+++ b/estudantes/templates/estudantes/alinhamentos_gerais.html
@@ -24,4 +24,7 @@
     <h5><a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}">Alocação Semanal</a></h5>
   </div>
 
+  <div class="div_arredondado pintern">
+    <h5><a href="{% url 'alocacao_semanal' %}">Alocação Semanal</a></h5>
+
 {% endblock %}
