sistema de alocação de horários totalmente integrado

--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -437,6 +437,9 @@
   {% endif %}
   {% endif %}
 
+  <hr>
+  <h4>Alocação Semanal dos Estudantes:<br></h4>
+  {% include "mostra_horarios.html" %}
 
   {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
 
