--- a/templates/mostra_horarios.html
+++ b/templates/mostra_horarios.html
@@ -8,12 +8,11 @@
 <style>
   table {
     border-collapse: collapse;
-    //width: 100%;
     user-select: none; /* Prevent text selection */
   }
   td, th {
     border: 1px solid black;
-    padding: 8px;
+    padding: 4px;
     text-align: center;
     border-width: 1px;
     background-color: white;
@@ -61,6 +60,25 @@
     box-shadow: inset 0 0 33px rgba(0, 255, 0, 1.0);
   }
 
+  .hifen {
+    display: inline; /* Default display */
+  }
+  
+  .hifen::after {
+    display: inline;
+    content: "-";
+    white-space: pre;
+  }
+
+  @media (max-width: 600px) {
+    .hifen::after {
+      content: "\A";
+    }
+    .horario {
+      font-size: 12px;
+    }
+  }
+
 </style>
 
 <b>Projeto:</b> {{ projeto }}<br>
@@ -73,59 +91,61 @@
 {% endfor %}
 <br>
 
-<table>
-  <thead>
-    <tr>
-      <th style="border-right: 2px solid black;"></th>
-      <th colspan="{{alocacoes|length}}" style="border-right: 2px solid black;">Segunda</th>
-      <th colspan="{{alocacoes|length}}" style="border-right: 2px solid black;">Terça</th>
-      <th colspan="{{alocacoes|length}}" style="border-right: 2px solid black;">Quarta</th>
-      <th colspan="{{alocacoes|length}}" style="border-right: 2px solid black;">Quinta</th>
-      <th colspan="{{alocacoes|length}}" style="border-right: 2px solid black;">Sexta</th>
-    </tr>
-    <tr>
-      <th style="border-right: 2px solid black;">Horário</th>
-      {% for i in "01234" %}
-        {% for alocacao in alocacoes %}
-          <th {% if forloop.last %}style="border-right: 2px solid black;"{% endif %}>E{{ forloop.counter }}</th>
-        {% endfor %}
-      {% endfor %}
-    </tr>
-    
-  </thead>
-  <tbody>
-    
-    {% for horario, dark in horarios %}
+<div class="table-responsive">
+  <table>
+    <thead>
       <tr>
-        {% with hora=forloop.counter0 %}
-        <td {% if dark %}class="overlay"{% endif %} style="border-right: 2px solid black;">{{horario}}</td>
-        {% for i in "01234" %}
-          {% if i == "4" and hora == 1 %}
-            <td colspan="{{alocacoes|length}}" style="background-color:lightgrey;">Aula Regular</td>
-          {% else %}
-            {% for alocacao in alocacoes %}
-              {% if request.user == alocacao.aluno.user %}
-                <td id="h_{{i}}_{{hora}}" class="h_{{i}}_{{hora}} meu{% if dark %} overlay{% endif %}"
-                {% if forloop.last %}style="border-right: 2px solid black;"{% endif %}></td>
-              {% else %}
-                <td id="h_{{i}}_{{hora}}_{{alocacao.id}}" class="h_{{i}}_{{hora}}{% if dark %} overlay{% endif %}"
-                {% if forloop.last %}style="border-right: 2px solid black;"{% endif %}
-                ></td>
-              {% endif %}
-            {% endfor %}
-          {% endif %}
-        {% endfor %}
-        {% endwith %}
+        <th style="border-right: 2px solid black;"></th>
+        <th colspan="{{alocacoes|length}}" style="border-right: 2px solid black;">Segunda</th>
+        <th colspan="{{alocacoes|length}}" style="border-right: 2px solid black;">Terça</th>
+        <th colspan="{{alocacoes|length}}" style="border-right: 2px solid black;">Quarta</th>
+        <th colspan="{{alocacoes|length}}" style="border-right: 2px solid black;">Quinta</th>
+        <th colspan="{{alocacoes|length}}" style="border-right: 2px solid black;">Sexta</th>
       </tr>
-    {% endfor %}
+      <tr>
+        <th style="border-right: 2px solid black;" class="horario">Horário</th>
+        {% for i in "01234" %}
+          {% for alocacao in alocacoes %}
+            <th {% if forloop.last %}style="border-right: 2px solid black;"{% endif %}>E{{ forloop.counter }}</th>
+          {% endfor %}
+        {% endfor %}
+      </tr>
+      
+    </thead>
+    <tbody>
+      
+      {% for inicio, fim, dark in horarios %}
+        <tr>
+          {% with hora=forloop.counter0 %}
+          <td {% if dark %}class="overlay"{% endif %} style="border-right: 2px solid black;">{{inicio}} <span class="hifen"></span> {{fim}}</td>
+          {% for i in "01234" %}
+            {% if i == "4" and hora == 1 %}
+              <td colspan="{{alocacoes|length}}" style="background-color:lightgrey;">Aula Regular</td>
+            {% else %}
+              {% for alocacao in alocacoes %}
+                {% if request.user == alocacao.aluno.user %}
+                  <td id="h_{{i}}_{{hora}}" class="h_{{i}}_{{hora}} meu{% if dark %} overlay{% endif %}"
+                  {% if forloop.last %}style="border-right: 2px solid black;"{% endif %}></td>
+                {% else %}
+                  <td id="h_{{i}}_{{hora}}_{{alocacao.id}}" class="h_{{i}}_{{hora}}{% if dark %} overlay{% endif %}"
+                  {% if forloop.last %}style="border-right: 2px solid black;"{% endif %}
+                  ></td>
+                {% endif %}
+              {% endfor %}
+            {% endif %}
+          {% endfor %}
+          {% endwith %}
+        </tr>
+      {% endfor %}
 
-  </tbody>
-</table>
+    </tbody>
+  </table>
+</div>
 {% if request.user.tipo_de_usuario == 1 %}
   <br>
   Instruções:<br>
   {% comment %} - Identifique os horários de trabalho em grupo, individuais, reuniões com orientador e se possível com os mentores nas organizações pareceiras.<br> {% endcomment %}
-  - Minimamente identifique 24 horas (contando as 2 horas de aulas) de dedicação ao Capstone na semana no período regular de aulas (das 7:30 as 17:45 de segunda a sexta).<br>
+  - Minimamente identifique 22 horas de dedicação ao Capstone na semana no período regular de aulas (das 7:30 as 17:45 de segunda a sexta fora a aula de sexta).<br>
   <b>Suas horas alocadas:</b> <span id="horas_alocadas">0</span><br>
   <br>
   - Sugerimos no mínimo 8 horas que todos os membros do grupo conseguem trabalhar juntos.<br>
@@ -136,11 +156,10 @@
 
 <script>
 
-  function set_horas(horarios) {
+  function set_horas(horas_comerciais, horas_outras) {
     {% if request.user.tipo_de_usuario == 1 %}
-      suas_horas = horarios.length*2;
-      document.getElementById("horas_alocadas").innerText = suas_horas + " horas";
-      if(suas_horas < 24) {
+      document.getElementById("horas_alocadas").innerText = horas_comerciais*2 + " horas (total = " + (horas_comerciais+horas_outras)*2 + " horas)";
+      if(horas_comerciais < 22/2) {
         document.getElementById("horas_alocadas").style.color = "red";
       } else {
         document.getElementById("horas_alocadas").style.color = "green";
@@ -210,15 +229,23 @@
 
         // Identificando os horários selecionados
         const horarios = [];
+        var horas_comerciais = 0;
+        var horas_outras = 0;
         for (let i = 0; i < 5; i++) {
           for (let j = 0; j < 7; j++) {
             const element = document.getElementById(`h_${i}_${j}`);
             if (element && element.classList.contains("highlight")) {
               horarios.push( [i,j] );
+              if(j == 0 || j == 1 || j == 3 || j == 4) {
+                horas_comerciais++;
+              } else {
+                horas_outras++;
+              }
             }
           }
         }
-        set_horas(horarios);
+        console.log(horas_outras);
+        set_horas(horas_comerciais, horas_outras);
         confere_juntos();
 
         // Ajax para salvar a alocação
@@ -231,7 +258,8 @@
           },
           dataType: "JSON",
           success: function (data) {},
-          {% include "ajax_error_function.js" %}
+          {% comment %} Creio que melhor sem essa rotina de erro {% endcomment %}
+          {% comment %} {% include "ajax_error_function.js" %} {% endcomment %}
         });
 
       });
@@ -244,14 +272,21 @@
     {% if alocacao.horarios %}
       {% if request.user == alocacao.aluno.user %}
         horarios = {{ alocacao.horarios|safe }};
+        var horas_comerciais = 0;
+        var horas_outras = 0;
         for (let i = 0; i < horarios.length; i++) {
           const [dia, horario] = horarios[i];
+          if(horario == 0 || horario == 1 || horario == 3 || horario == 4) {
+            horas_comerciais++;
+          } else {
+            horas_outras++;
+          }
           const element = document.getElementById(`h_${dia}_${horario}`);
           if (element) {
             element.classList.add("highlight");
           }
         }
-        set_horas(horarios);
+        set_horas(horas_comerciais, horas_outras);
 
       {% else %}
         horarios = {{ alocacao.horarios|safe }};
@@ -290,8 +325,19 @@
             horarios = JSON.parse(horarios);
 
             {% if request.user.tipo_de_usuario != 1 %}
-              document.getElementById("a"+id).innerText = horarios.length*2;
-              if(horarios.length*2 < 24) {
+              var horas_comerciais = 0;
+              var horas_outras = 0;
+              for (let i = 0; i < horarios.length; i++) {
+                const [dia, horario] = horarios[i];
+                if(horario == 0 || horario == 1 || horario == 3 || horario == 4) {
+                  horas_comerciais++;
+                } else {
+                  horas_outras++;
+                }
+              }
+              document.getElementById("a"+id).innerText = (horas_comerciais*2) + "/" + ((horas_comerciais+horas_outras)*2);
+
+              if(horas_comerciais*2 < 22) {
                 document.getElementById("a"+id).style.color = "red";
               } else {
                 document.getElementById("a"+id).style.color = "green";
@@ -317,12 +363,17 @@
 
         confere_juntos();
       },
-      {% include "ajax_error_function.js" %}
+      {% comment %} Creio que melhor sem essa rotina de erro {% endcomment %}
+      {% comment %} {% include "ajax_error_function.js" %} {% endcomment %}
     });
   }
 
   // Verifica atualizações continuamente
-  setInterval(refresh_horas, 8000);
+  {% if request.user.tipo_de_usuario == 1 %}
+    setInterval(refresh_horas, 8000);
+  {% else %}
+    setInterval(refresh_horas, 60000);
+  {% endif %}
 
   refresh_horas();
 
