--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -420,7 +420,7 @@
         <b>OBSERVACÕES:</b><br>
         {{estudante.user.observacoes|linebreaks}}<br>{% endif %}
         {% if estudante.trabalhou %}
-        <b>Você já trabalhou/trabalha/estagiou/estagia/empreende em alguma empresa (informe situação)?</b><br>
+        <b>Você já trabalhou/trabalha/estagiou/estagia/empreende em alguma empresa?</b><br>
         {{estudante.trabalhou|linebreaks}}<br>{% endif %}
         {% if estudante.social %}
         <b>Você já participou de atividades sociais? Por exemplo trabalhos voluntários ou ações em comunidades.</b><br>
