--- a/templates/mostra_horarios.html
+++ b/templates/mostra_horarios.html
@@ -98,8 +98,15 @@
 {% for alocacao in alocacoes %}
   <b>Estudante {{ forloop.counter }} (E{{ forloop.counter }}):</b> 
   <span class="alocacao" {% if request.user == alocacao.aluno.user %}style="color:red"{% endif %}>{{ alocacao.aluno.user.get_full_name }}</span>
-  {% if request.user.tipo_de_usuario != 1 %}(<span id="a{{alocacao.id}}">&#8709;</span> horas){% endif %}
+  {% if request.user.tipo_de_usuario != 1 %}
+    (<span id="a{{alocacao.id}}" data-toggle="tooltip" data-placement="bottom" title="( horário em blocos diurnos de aulas / horário total )">&#8709;</span> horas)
+  {% endif %}
   <br>
+
+
+  
+
+
 {% endfor %}
 <br>
 
